⏺️🌩️ Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@ Select ONE Additional Feature to Add
       table,
       th,
       td {
-        border: 1px solid;
+        border: 1px solid; text-align: center
       }
-      body {
+      head {}
+      body {text-align: center; 
         background-color: rgb(255, 248, 232);
       }
       #title {
@@ -61,7 +62,7 @@ Select ONE Additional Feature to Add
     <a href="#recipe#1">Recipe #1: Tomato Egg Stir-Fry</a>
     <br />
     <a href="#recipe#2">Recipe #2: Katsu Curry </a> <br />
-    <a href="recipe#3>"> Recipe #3: Fruit Sando</a> <br />
+    <a href="recipe#3>">Recipe #3: Fruit Sando</a> <br />
     <br />
     <br />
     <br />
